# WeFe

./: .gitignore  .npmrc  LICENSE  README.md  README_MEMBER.md  common.properties  config.properties  encryptor.properties  jenkins_docker_deploy.sh  member-base.properties  pom.xml  requirements.txt
VisualFL/: config.properties  requirements.txt  requirements_dev.txt
VisualFL/depends/: README.md
VisualFL/deploy_tools/: MANIFEST.in  README.md  setup.cfg  setup.py
VisualFL/script/: cluster_manager.sh  cluster_worker.sh  coordinator.sh  env.sh  master.sh  service.sh
VisualFL/visualfl/: __init__.py  manager.py  master.py  worker.py
assembly/: install.sh
assembly/scripts/: install.sh
board/: README.md  pom.xml
board/board-service/: README.md  pom.xml
board/board-website/: .env  .env.local  .eslintrc.js  .lintstagedrc.js  .npmrc  README.md  babel.config.js  commitlint.config.js  index.html  package-lock.json  package.json  vue.config.js
common/: README.md  pom.xml
common-cert/: pom.xml
common/java/: pom.xml
common/python/: __init__.py  federation.py  session.py  table.py
common/python/calculation/acceleration/libs/GPU/CGBN/samples/gpu_lib/: CMakeLists.txt  build.sh  gpu_lib_test.py  powm_mulm.cu  test.py
deploy/: WeFe隐私计算服务联邦SQL部署说明文档-V2.0.md  WeFe隐私计算服务联邦SQL部署说明文档.md  WeFe隐私计算服务视觉处理Visualfl部署说明文档-V2.0.md  WeFe隐私计算服务视觉处理Visualfl部署说明文档.md  WeFe隐私计算服务部署说明文档-V2.0.md  WeFe隐私计算服务部署说明文档.md
docs/: README.md  _coverpage.md  _sidebar.md  index.html  start.sh
docs/_media/: custom.css
docs/article/: article.md
docs/calculation_engine/: calculation_engine.md  fc.md  spark.md
docs/committer/: committer.md
docs/federated_learning/: federated_learning.md
docs/hardware_acceleration/: gpu.md  hardware_acceleration.md
docs/install/: install.md  install_fc.md
docs/operation_guide/: account.md  data_set.md  init_system.md  modeling.md  operation_guide.md  project.md  union.md
docs/questions/: questions.md
docs/release/: release.md
docs/system_framework/: board-service.md  board-website.md  board_mysql.md  flow.md  fusion.md  gateway.md  global.md  kernel.md  serving.md  union.md
docs/vs/: vs.md
documents/code_style/: java_coding_guidelines.md  python_code_style.md
documents/开发文档/: 组件开发流程.md
flow/: Dockerfile  README.md  app_launcher.py  entrypoint.sh  service.sh  settings.py
flow/alert_service/: job_error_mail_warn_scheduler.py
flow/cycle_actions/: common_thread_pool.py
flow/utils/: bean_util.py  budget_scf_utils.py  budget_utils.py  job_utils.py
flow/web/: app.py
fusion/: README.md  pom.xml
fusion/fusion-core/: pom.xml
fusion/fusion-service/: pom.xml
fusion/fusion-website/: .env  .env.local  (+8 more)
gateway/: README.md  pom.xml
kernel/: README.md  model_base.py  settings.py  task_executor.py
manager/: pom.xml
mpc/: pom.xml
release/: README.md  jenkins_docker_deploy.sh
serving/: README.md  pom.xml
union/: README.md  pom.xml
(+5465 files in other folders)
